# AdvancedCMakeTitanEngineExample

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  stdafx.h
.github/workflows/: build.yml  linux-build.yml
Engine/: Engine.h
Engine/Animation/: Animation Keys.h  Animation.h  Skeleton.h
Engine/Code/: CE Item.h  CE Source.h  CE.h
Engine/Edit/: Editor Interface.h  Undo.h  Viewport4.h
Engine/File/: Chunk.h  File Text.h  File.h  IO.h  Pak.h  Xml.h
Engine/Game/: Area.h  Mini Map.h  Obj.h  Waypoint.h  World.h
Engine/Graphics/: Clouds.h  Color.h  Display Draw.h  Display State.h  Display.h  Effects 3D.h  Fog.h  Image RT.h  Image.h  Light.h  Material.h  Particle.h  Renderer Instancing.h  Renderer.h  Shader Main.h  Shader.h  Sky.h  Sun.h  Vertex Index Buffer Ex.h  Vertex Index Buffer.h  Water.h
Engine/Gui/: Font.h  Gui Object.h  Gui Objects.h  Gui Skin.h  Gui.h  Panel Image.h  Panel.h  Text Style.h
Engine/Gui/Objects/: Button.h  CheckBox.h  Color Picker.h  ComboBox.h  Desktop.h  Gui Custom.h  Gui Image.h  List.h  Menu.h  MenuBar.h  Progress.h  Property.h  Region.h  SlideBar.h  Slider.h  Tabs.h  Text.h  TextBox.h  TextLine.h  Viewport.h  Window IO.h  Window.h
Engine/Input/: Input Buttons.h  Input.h  Joypad.h  Keyboard.h  Mouse.h  Touch.h
Engine/Math/: Calculate.h  Camera.h  Frustum.h  Math.h  Matrix.h  Number.h  Orientation.h  Random.h  Shape.h  Vector.h
Engine/Math/Shapes/: Ball.h  Box.h  Capsule.h  Circle.h  Edge.h  Plane.h  Polygon.h  Quad.h  Rectangle.h  Triangle.h  Tube.h
Engine/Memory/: Cache.h  Cipher.h  Counted Pointer.h  Hash.h  Index.h  Map.h  Mem Block.h  Mem Continuous.h  Mem Extended.h  Mem List.h  Mem Pointer.h  Mem Simple.h  Mem Temporary.h  Memory.h  _Cache.h  _Grid.h  _Map.h  _Memb.h  _Memc.h  _Meml.h  _Memx.h
Engine/Mesh/: Blocks.h  Heightmap.h  Material Palette.h  Mesh Base.h  Mesh Csg.h  Mesh Cuts.h  Mesh Group.h  Mesh Import.h  Mesh Lod.h  Mesh Mesh.h  Mesh Overlay.h  Mesh Part.h  Mesh Render.h
Engine/Misc/: Application.h  Callback.h  Character.h  Compress.h  Cpu.h  DLL.h  Date Time.h  Enum.h  MP4.h  Member.h  Misc.h  Object.h  Param.h  Pathfind 2D.h  Pathfind.h  Printer.h  Sort.h  States.h  String Functions.h  String.h  String8.h  Thread.h  Timer.h  Translation.h  UID.h  Video.h  Windows.h
Engine/Net/: Advertisement.h  Connection.h  Download.h  Esenthel Store.h  Facebook.h  Ftp.h  Game Analytics.h  Internet Cache.h  Interpolator.h  Patcher.h  Socket.h  Sql.h  Steam.h  Store.h  Xbox Live.h
Engine/Physics/: Actor.h  Aggregate.h  Cloth.h  Controller.h  Destruct Mesh.h  Grab.h  Joint.h  Phys Body.h  Phys Material.h  Physics.h  Ragdoll.h  Vehicle.h
Engine/Sound/: Music.h  Sound Extra.h  Sound Stream.h  Sound.h
Engine/_/: defines.h  headers.h  structs.h
Include/enet/: enet.h  types.h
Source/: Auto.cpp  Main.cpp  Main.h  MyClass.h  getopt_stub.cpp
apps/client/: CMakeLists.txt
apps/client/src/: ConnectionToServer.cpp  ConnectionToServer.h  Main.cpp  main.cpp
apps/connection_server/: CMakeLists.txt
apps/connection_server/src/: main.cpp
apps/database_server/: CMakeLists.txt
apps/database_server/src/: main.cpp
apps/physics_server/: CMakeLists.txt
apps/physics_server/src/: main.cpp
apps/remote_control/: CMakeLists.txt
apps/remote_control/src/: main.cpp
apps/server/: CMakeLists.txt
apps/server/src/: ConnectionsToClients.cpp  ConnectionsToClients.h  Main.cpp  server_main.cpp
apps/world_server/: CMakeLists.txt
apps/world_server/src/: WorldServer.cpp  WorldServer.h  main.cpp
cmake/: UnpackEngine.cmake
libs/core/: CMakeLists.txt
libs/game/: CMakeLists.txt
libs/game/include/: @@headers.h  Auto.h  LoadAssets.h
libs/game/src/: LoadAssets.cpp
libs/net/: CMakeLists.txt
libs/net/include/: Net.h
libs/net/src/: Net.cpp
src/: @@headers.h  Auto.cpp  Main.cpp  Main.h  MyClass.cpp
tests/: CMakeLists.txt  EE_boot_stubs.cpp  EnetTest.cpp  MyClassTests.cpp  ServiceHostTest.cpp  SpdlogTest.cpp
